fix text-align desc

--- a/styles.css
+++ b/styles.css
@@ -17,11 +17,11 @@ body{
     font-weight: 500;
 }
 
-.desc{
+/* .desc{
     font-size: 20px;
     font-weight: 500;
     text-align: left;
-}
+} */
 
 .col.form{
     text-align: left;
